// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`All specifiers 1`] = `
"import { Textinput, Button as Button3 } from 'lego-on-react';
import { TextArea, cnTextArea } from '../components/TextArea';
import { Test1, Test2 } from 'to-replace-import';

const Component = () => {
    return <>
        <TextArea size=\\"xs\\" />
        <TextArea size=\\"n\\" view=\\"classic\\" />
        <Textinput
            className='Class'
            /* TODO: lego-autoreplace - \\"mix\\"(удален): Используйте className вместо mix */
            view='default'
            /* TODO: lego-autoreplace - \\"controlAttrs\\"(удален): свойства из \\"controlAttrs\\" можно добавить напрямую в компонент */ />
        <Button3
            className='Class'
            /* TODO: lego-autoreplace - \\"tone\\"(удален): Для изменения цвета контролов необходимо использовать глобальные-темы */ />
    </>;
};"
`;

exports[`Only Button 1`] = `
"/* eslint-disable */

import { TextInput, Button as Button3 } from 'lego-on-react';
import { TextArea, cnTextArea } from '../components/TextArea';
import { Test1, Test2 } from 'to-replace-import';

const Component = () => {
    return <>
        <TextArea size=\\"xs\\" />
        <TextArea size=\\"n\\" view=\\"classic\\" />
        <TextInput cls=\\"Class\\" mix={SomeMix} view=\\"default\\" controlAttrs={{ spellCheck: false }} />
        <Button3
            className='Class'
            /* TODO: lego-autoreplace - \\"tone\\"(удален): Для изменения цвета контролов необходимо использовать глобальные-темы */ />
    </>;
};"
`;

exports[`Only Button with new import 1`] = `
"/* eslint-disable */

import { TextInput } from 'lego-on-react';
import { Button as Button3 } from '@yandex-lego/components';
import { TextArea, cnTextArea } from '../components/TextArea';
import { Test1, Test2 } from 'to-replace-import';

const Component = () => {
    return <>
        <TextArea size=\\"xs\\" />
        <TextArea size=\\"n\\" view=\\"classic\\" />
        <TextInput cls=\\"Class\\" mix={SomeMix} view=\\"default\\" controlAttrs={{ spellCheck: false }} />
        <Button3
            className='Class'
            /* TODO: lego-autoreplace - \\"tone\\"(удален): Для изменения цвета контролов необходимо использовать глобальные-темы */ />
    </>;
};"
`;

exports[`Textarea with wrapper 1`] = `
"/* eslint-disable */

import { TextInput, Button as Button3 } from 'lego-on-react';
import { Textarea, cnTextArea } from '../components/TextArea';
import { Test1, Test2 } from 'to-replace-import';

const Component = () => {
    return <>
        <Textarea
            /* TODO: lego-autoreplace - \\"size\\"(изменён): Размер \\"xs\\" больше не поддерживается, используйте кастомный модификатор */
            size='s' />
        <Textarea
            /* TODO: lego-autoreplace - \\"size\\"(изменён): Компонент больше не поддерживает размеры — n */
            size='m' />
        <TextInput cls=\\"Class\\" mix={SomeMix} view=\\"default\\" controlAttrs={{ spellCheck: false }} />
        <Button3 cls=\\"Class\\" view=\\"classic\\" tone=\\"red\\" />
    </>;
};"
`;

exports[`replace all imports 1`] = `
"/* eslint-disable */

import { TextInput, Button as Button3 } from 'lego-on-react';
import { TextArea, cnTextArea } from '../components/TextArea';
import { Test1, Test2 } from 'all-replaced';

const Component = () => {
    return (
        <>
            <TextArea size=\\"xs\\" />
            <TextArea size=\\"n\\" view=\\"classic\\" />
            <TextInput cls=\\"Class\\" mix={SomeMix} view=\\"default\\" controlAttrs={{ spellCheck: false }} />
            <Button3 cls=\\"Class\\" view=\\"classic\\" tone=\\"red\\" />
        </>
    );
};"
`;
